crates/toml_edit/tests/fixtures/invalid/table/duplicate-key-dotted-table.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.apple] # INVALID
  | ^
Invalid table header
Duplicate key `apple` in table `fruit`
